[package]
name = "dir_buster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
clap = { version = "4.1.11", features = ["derive"] }
reqwest = {version = "0.11.15", features = ["json"]}
anyhow = "1.0.70"
